# ChangeLog for gnome-base/gconf
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /var/cvsroot/gentoo-x86/gnome-base/gconf/ChangeLog,v 1.27 2003/01/31 01:40:23 foser Exp $

*gconf-2.2.0 (30 Jan 2003)

  30 Jan 2003; foser <foser@gentoo.org> gconf-2.2.0.ebuild :
  GNOME 2.2 rc2 commit

  16 Dec 2002; Aron Griffis <agriffis@gentoo.org> gconf-1.0.8-r4.ebuild :
  Added ~alpha to KEYWORDS

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords

*gconf-1.0.8-r4 (24 Oct 2002)

  08 Dec 2002; Martin Holzer <mholzer@gentoo.org>  gconf-1.0.8-r4.ebuild Changelog :	
  Fixed SRC_URI.

  24 Oct 2002; Spider <spider@gentoo.org>  gconf-1.0.8-r4.ebuild : I made some 
  Changes to the ebuild, libtool and others. the previous version broke during
  galeon install on some clean 1.4 systems, where this version works. test on
  other systems but it should be ok.
  
  
*gconf-1.2.0-r5 (05 Aug 2002)
  05 Aug 2002; Leonardo Boshell <leonardop@gentoo.org> gconf-1.2.0-r5.ebuild:
  Fix sandbox violations affecting the installation under certain
  circumstances. Closes bug #5797.
  
*gconf-1.2.1 (05 Aug 2002)
  05 Aug 2002 ; Spider <spider@gentoo.org> gconf-1.2.1.ebuild :
  new version, updated deps
  
*gconf-1.2.0-r4 (18 Jul 2002)
  18 Jul 2002; Spider <spider@gentoo.org> gconf-1.2.0-r4.ebuild :
  added the dep on gtk+, fixed to use mirror:// 
  

gconf-1.2.0-r3 (06 Jul 2002)
  06 Jul 2002; Spider <spider@gentoo.org> gconf-1.2.0-r3.ebuild :
  added a hack to parse all installed gconf files and fix permissions.
  killing gconfd  almost everywhere installing  
  
  a quick addendum to create /root/.gconfd as well

  07 Jul 2002; Spider <spider@gentoo.org> 
  changed a typo'd 1 to 2 in gconftool-2 check. 
  http://bugs.gentoo.org/show_bug.cgi?id=4665

gconf-1.2.0-r2 (28 jun 2002)
  28 Jun 2002; Spider <spider@gentoo.org> gconf-1.2.0-r2.ebuild :
  added a dep for gtk-doc to see if it helps
  
gconf-1.2.0-r1 (14 Jun 2002)