@@ -1,6 +1,6 @@
 # Copyright 1999-2002 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gconf/gconf-2.2.0.ebuild,v 1.1 2003/01/31 01:40:23 foser Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gconf/gconf-2.2.0.ebuild,v 1.2 2003/02/04 15:43:24 foser Exp $
 
 IUSE="doc"
 
@@ -28,7 +28,8 @@ DEPEND="${RDEPEND}
 	>=dev-util/pkgconfig-0.12.0
 	doc? ( dev-util/gtk-doc )"
 
-LIBTOOL_FIX="1"
+# alpha compile fix
+use alpha && MAKEOPTS="-j1"
 
 kill_gconf () {
 	# this function will kill all running gconfd that could be causing troubles
