@@ -1,8 +1,11 @@
 # ChangeLog for gnome-base/gconf
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gconf/ChangeLog,v 1.27 2003/01/31 01:40:23 foser Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gconf/ChangeLog,v 1.28 2003/02/04 15:43:23 foser Exp $
 
 *gconf-2.2.0 (30 Jan 2003)
+
+  04 Feb 2003; foser <foser@gentoo.org> gconf-2.2.0.ebuild,gconf-1.2.1.ebuild :
+  Alpha multiple job fix (#14280)
 
   30 Jan 2003; foser <foser@gentoo.org> gconf-2.2.0.ebuild :
   GNOME 2.2 rc2 commit
